--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/img/fenijutsu.jpeg" />
+    <link rel="icon" href="../src/img/fenijutsu.jpeg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    
+   
+    <meta name='og:title' content='Fenijutsu'>
+<meta name='og:type' content='movie'>
+<meta name='og:url' content='http://www.fenijutsu.ne/'>
+<meta name='og:image' content='../src/img/fenijutsu.jpeg'>
+<meta name='og:site_name' content='Fenijutsu'>
+<meta name='og:description' content='Federation nigerienne de ju jitsu'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <link rel="apple-touch-icon" href="../src/img/fenijutsu.jpeg" />
+    <link rel="apple-touch-icon" href="../src/img/fenijutsu.jpeg"/>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
