--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 <meta name='og:type' content='movie'>
 <meta name='og:url' content='http://www.fenijutsu.ne/'>
 <meta name='og:image' content='../src/img/fenijutsu.jpeg'>
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
 <meta name='og:site_name' content='Fenijutsu'>
 <meta name='og:description' content='Federation nigerienne de ju jitsu'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
